Updated with new team background, new publication logos, revised team and advisor overlays, fixed background video Adjusted teams to display only three on mobile Also added jquery to auto-update polymath blog posts from medium

--- a/polymath-website-version-1/css/style.css
+++ b/polymath-website-version-1/css/style.css
@@ -1,4 +1,4 @@
-.overlay {
+/* .overlay {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -8,4 +8,23 @@
   padding-top: 5%;
   background: grey;
   opacity: 0.5;
+} */
+
+.team-member-name {
+  padding-top: 80%;
+}
+
+.img-responsive {
+  width: auto;
+  /* height: 100%; */
+}
+
+.background-polymath {
+  min-height: 700px;
+  /* background: url("../images/bg/bg-newpolymath.png") no-repeat center center; */
+  background: url("../images/bg/bg_bull.png") no-repeat center center;
+  /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; */
+  background-size: cover;
 }
